--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="year" class="year"></div>
 
-    <h1>Contagem Regressiva pro 18tão</h1>
+    <h1>Contagem Regressiva pra Viagem</h1>
 
     <div id="countdown" class="countdown">
       <div class="time">
